# url-shortener-rust

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
migrations/: init.cql
src/: config.rs  errors.rs  main.rs  models.rs  routes.rs
src/cache/: redis.rs
src/db/: scylla.rs
src/handlers/: redirect.rs  shorten.rs
src/utils/: base62.rs
